Java 27+ compat & Fixes